--- a/index.html
+++ b/index.html
@@ -178,49 +178,69 @@ renderTemplates();
       updateUI();
     }
 
-    for (const [i, t] of tasks.entries()) {
-  const div = document.createElement("div");
-  div.className = "task";
-  div.style.display = "flex";
-  div.style.flexDirection = "column";
-  div.style.marginBottom = "0.5rem";
+    function updateUI() {
+  const taskList = $("taskList");
+  taskList.innerHTML = "";
+  const remaining = tasks.filter(t => !t.completed);
+  $("startBtn").disabled = remaining.length === 0;
+  tasks.sort((a, b) => b.priority - a.priority);
 
-  const row = document.createElement("div");
-  row.style.display = "flex";
-  row.style.justifyContent = "space-between";
-  row.style.alignItems = "center";
+  for (const [i, t] of tasks.entries()) {
+    const div = document.createElement("div");
+    div.className = "task";
+    div.style.display = "flex";
+    div.style.flexDirection = "column";
+    div.style.marginBottom = "0.5rem";
 
-  const info = document.createElement("span");
-  info.textContent = `${t.name} ${t.completed ? "(✓)" : ""} — ${t.priority.toFixed(1)}`;
+    const row = document.createElement("div");
+    row.style.display = "flex";
+    row.style.justifyContent = "space-between";
+    row.style.alignItems = "center";
 
-  const delBtn = document.createElement("button");
-  delBtn.textContent = "🗑️";
-  delBtn.onclick = () => {
-    if (!confirm("Delete this task?")) return;
-    tasks.splice(i, 1);
-    persist();
-    updateUI();
-  };
+    const info = document.createElement("span");
+    info.textContent = `${t.name} ${t.completed ? "(✓)" : ""} — ${t.priority.toFixed(1)}`;
 
-  row.appendChild(info);
-  row.appendChild(delBtn);
-  div.appendChild(row);
+    const delBtn = document.createElement("button");
+    delBtn.textContent = "🗑️";
+    delBtn.onclick = () => {
+      if (!confirm("Delete this task?")) return;
+      tasks.splice(i, 1);
+      persist();
+      updateUI();
+    };
 
-  if (t.addedAt) {
-    const ts = document.createElement("div");
-    ts.className = "score";
-    ts.textContent = `Added: ${new Date(t.addedAt).toLocaleString()}`;
-    div.appendChild(ts);
+    row.appendChild(info);
+    row.appendChild(delBtn);
+    div.appendChild(row);
+
+    if (t.addedAt) {
+      const ts = document.createElement("div");
+      ts.className = "score";
+      ts.textContent = `Added: ${new Date(t.addedAt).toLocaleString()}`;
+      div.appendChild(ts);
+    }
+
+    if (t.dueDate) {
+      const dd = document.createElement("div");
+      dd.className = "score";
+      dd.textContent = `Due: ${t.dueDate}`;
+      div.appendChild(dd);
+    }
+
+    taskList.appendChild(div);
   }
 
-  if (t.dueDate) {
-    const dd = document.createElement("div");
-    dd.className = "score";
-    dd.textContent = `Due: ${t.dueDate}`;
-    div.appendChild(dd);
-  }
-
-  taskList.appendChild(div);
+  // Charts Due Today section
+  const dueTodayList = $("dueTodayList");
+  dueTodayList.innerHTML = "";
+  const today = new Date().toISOString().split("T")[0];
+  tasks
+    .filter(t => t.dueDate === today && !t.completed)
+    .forEach(t => {
+      const div = document.createElement("div");
+      div.textContent = `${t.name} — due today`;
+      dueTodayList.appendChild(div);
+    });
     }
 
     const dueTodayList = $("dueTodayList");
