--- a/index.html
+++ b/index.html
@@ -110,6 +110,14 @@
     let focusQueue = [];
 
     async function init() {
+      const selects = ["importance", "urgency", "novelty", "interest", "timeToStart", "difficulty"];
+selects.forEach(id => {
+  for (let i = 1; i <= 5; i++) {
+    const opt = document.createElement("option");
+    opt.value = opt.textContent = i;
+    $(id).appendChild(opt);
+  }
+});
       if (MODE === "supabase" && SUPABASE_URL && SUPABASE_ANON_KEY) {
         const script = document.createElement('script');
         script.src = 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js';
