--- a/index.html
+++ b/index.html
@@ -236,6 +236,18 @@ renderTemplates();
     taskList.appendChild(div);
   
     }
+const dueTodayList = $("dueTodayList");
+  dueTodayList.innerHTML = "";
+  const today = new Date().toISOString().split("T")[0];
+
+  tasks
+    .filter(t => t.dueDate === today && !t.completed)
+    .forEach(t => {
+      const div = document.createElement("div");
+      div.textContent = `${t.name} — due today`;
+      dueTodayList.appendChild(div);
+    });
+      
 
     function startFocus() {
       $("capture").classList.add("hidden");
