--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@ function updateUI() {
   // tasks due today
   const dueTodayList = $("dueTodayList");
   dueTodayList.innerHTML = "";
-  const today = new Date().toISOString().split("T")[0];
+  const now = new Date();
+now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
+const today = now.toISOString().split("T")[0];
   tasks.filter(t => t.dueDate === today && !t.completed).forEach(t => {
     const div = document.createElement("div");
     div.textContent = `${t.name} — due today`;
