--- a/index.html
+++ b/index.html
@@ -39,10 +39,42 @@
 
   <section id="capture">
     <label>Task Name <input id="name" type="text" /></label>
-    <label>Importance (1–5) <select id="importance"></select></label>
-    <label>Urgency (1–5) <select id="urgency"></select></label>
-    <label>Dopamine – Novelty (1–5) <select id="novelty"></select></label>
-    <label>Dopamine – Interest (1–5) <select id="interest"></select></label>
+    <label>Importance (1–5)
+      <select id="importance">
+        <option value="1">1 — Minimal</option>
+        <option value="2">2</option>
+        <option value="3" selected>3 — Moderate</option>
+        <option value="4">4</option>
+        <option value="5">5 — Critical</option>
+      </select>
+    </label>
+    <label>Urgency (1–5)
+      <select id="urgency">
+        <option value="1">1 — No rush</option>
+        <option value="2">2</option>
+        <option value="3" selected>3 — Soon</option>
+        <option value="4">4</option>
+        <option value="5">5 — Immediate</option>
+      </select>
+    </label>
+    <label>Dopamine – Novelty (1–5)
+      <select id="novelty">
+        <option value="1">1 — Familiar</option>
+        <option value="2">2</option>
+        <option value="3" selected>3 — Mixed</option>
+        <option value="4">4</option>
+        <option value="5">5 — Exciting</option>
+      </select>
+    </label>
+    <label>Dopamine – Interest (1–5)
+      <select id="interest">
+        <option value="1">1 — Boring</option>
+        <option value="2">2</option>
+        <option value="3" selected>3 — Neutral</option>
+        <option value="4">4</option>
+        <option value="5">5 — Fascinating</option>
+      </select>
+    </label>
     <label>Dopamine – External Pressure
   <select id="externalPressure">
     <option value="" disabled selected>⬇️ Select external pressure</option>
@@ -53,8 +85,24 @@
     <option value="5">🚨 Patient emergency</option>
   </select>
     </label>
-    <label>Time to Start (1–5) <select id="timeToStart"></select></label>
-    <label>Difficulty (1–5) <select id="difficulty"></select></label>
+    <label>Time to Start (1–5)
+      <select id="timeToStart">
+        <option value="1">1 — Requires prep</option>
+        <option value="2">2</option>
+        <option value="3" selected>3 — Ready soon</option>
+        <option value="4">4</option>
+        <option value="5">5 — Ready now</option>
+      </select>
+    </label>
+    <label>Difficulty (1–5)
+      <select id="difficulty">
+        <option value="1">1 — Easy</option>
+        <option value="2">2</option>
+        <option value="3" selected>3 — Manageable</option>
+        <option value="4">4</option>
+        <option value="5">5 — Very hard</option>
+      </select>
+    </label>
     <label>Optional Due Date
   <input type="date" id="dueDate" />
     </label>
@@ -70,7 +118,7 @@
   <div id="templateButtons"></div>
     </div>
     
-    <details class="peek">
+    <details class="peek" open>
       <summary>🔍 Peek at tasks</summary>
       <div id="taskList"></div>
     </details>
@@ -91,16 +139,38 @@
 
   <script>
 const $ = id => document.getElementById(id);
+const coerceNumber = (value, fallback = 0) => {
+  const parsed = Number(value);
+  return Number.isFinite(parsed) ? parsed : fallback;
+};
+const getScaleValue = (id, fallback = 3) => {
+  const el = $(id);
+  if (!el) return fallback;
+  const raw = el.value;
+  if (raw === null || raw === undefined || raw === "") return fallback;
+  const parsed = Number(raw);
+  return Number.isFinite(parsed) ? parsed : fallback;
+};
 
-// populate the numeric dropdowns
+// ensure the numeric dropdowns have usable defaults even if stored HTML was edited
 const selects = ["importance", "urgency", "novelty", "interest", "timeToStart", "difficulty"];
-selects.forEach(id => {
-  for (let i = 1; i <= 5; i++) {
-    const opt = document.createElement("option");
-    opt.value = opt.textContent = i;
-    $(id).appendChild(opt);
-  }
-});
+function ensureScaleControls() {
+  selects.forEach(id => {
+    const selectEl = $(id);
+    if (!selectEl) return;
+    if (selectEl.options.length === 0) {
+      for (let i = 1; i <= 5; i++) {
+        const opt = document.createElement("option");
+        opt.value = String(i);
+        opt.textContent = String(i);
+        selectEl.appendChild(opt);
+      }
+    }
+    if (!selectEl.value) {
+      selectEl.value = "3";
+    }
+  });
+}
 
 // Supabase / local storage set‑up
 const MODE = localStorage.getItem("MODE") || "local";
@@ -119,16 +189,16 @@ function init() {
     script.onload = async () => {
       supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
       const { data } = await supabase.from('tasks').select('*');
-      if (data) tasks = data;
+      tasks = Array.isArray(data) ? data.map(normalizeTask) : [];
       renderTemplates();
       updateUI();
     };
     document.head.appendChild(script);
   } else {
     const saved = localStorage.getItem("tasks");
-    if (saved) tasks = JSON.parse(saved);
+    tasks = saved ? JSON.parse(saved).map(normalizeTask) : [];
     const savedTemplates = localStorage.getItem("templates");
-    if (savedTemplates) templates = JSON.parse(savedTemplates);
+    templates = savedTemplates ? JSON.parse(savedTemplates) : [];
     renderTemplates();
     updateUI();
   }
@@ -137,19 +207,42 @@ function init() {
 function computePriority(t) {
   // if this task has sub-tasks, average their priorities
   if (Array.isArray(t.subTasks) && t.subTasks.length > 0) {
-    const total = t.subTasks.reduce((sum, s) => sum + s.priority, 0);
-    return total / t.subTasks.length;
+    const pending = t.subTasks.filter(s => !s.completed);
+    if (pending.length === 0) return 0;
+    const total = pending.reduce((sum, s) => sum + coerceNumber(s.priority, 0), 0);
+    return total / pending.length;
   }
 
   // original calculation
-  const dopamine     = t.novelty + t.interest;
-  const pressure     = t.externalPressure;
-  const friction     = (6 - t.timeToStart) + (6 - t.difficulty);
-  return (t.importance * 2)
-       + (t.urgency    * 2)
-       + (dopamine     * 2)
-       + (pressure     * 5)
-       + (friction     * 1.5);
+  const dopamine     = coerceNumber(t.novelty, 3) + coerceNumber(t.interest, 3);
+  const pressure     = coerceNumber(t.externalPressure, 0);
+  const friction     = (6 - coerceNumber(t.timeToStart, 3)) + (6 - coerceNumber(t.difficulty, 3));
+  return (coerceNumber(t.importance, 3) * 2)
+       + (coerceNumber(t.urgency, 3)    * 2)
+       + (dopamine                     * 2)
+       + (pressure                     * 5)
+       + (friction                     * 1.5);
+}
+
+function normalizeTask(raw) {
+  const task = { ...raw };
+  task.importance = coerceNumber(task.importance, 3);
+  task.urgency = coerceNumber(task.urgency, 3);
+  task.novelty = coerceNumber(task.novelty, 3);
+  task.interest = coerceNumber(task.interest, 3);
+  task.externalPressure = coerceNumber(task.externalPressure, 0);
+  task.timeToStart = coerceNumber(task.timeToStart, 3);
+  task.difficulty = coerceNumber(task.difficulty, 3);
+  const basePriority = computePriority({ ...task, subTasks: [] });
+  task.subTasks = Array.isArray(task.subTasks)
+    ? task.subTasks.map(sub => ({
+        ...sub,
+        completed: Boolean(sub && sub.completed),
+        priority: coerceNumber(sub && sub.priority, basePriority),
+      }))
+    : [];
+  task.priority = computePriority(task);
+  return task;
 }
 
 async function persist() {
@@ -168,13 +261,13 @@ function addTask() {
   const task = {
     id: Date.now().toString(),
     name,
-    importance: +$("importance").value,
-    urgency: +$("urgency").value,
-    novelty: +$("novelty").value,
-    interest: +$("interest").value,
-    externalPressure: +$("externalPressure").value,
-    timeToStart: +$("timeToStart").value,
-    difficulty: +$("difficulty").value,
+    importance: getScaleValue("importance"),
+    urgency: getScaleValue("urgency"),
+    novelty: getScaleValue("novelty"),
+    interest: getScaleValue("interest"),
+    externalPressure: getScaleValue("externalPressure", 0),
+    timeToStart: getScaleValue("timeToStart"),
+    difficulty: getScaleValue("difficulty"),
     dueDate: $("dueDate").value || null,
     completed: false,
     createdAt: new Date().toISOString(),
@@ -228,63 +321,15 @@ function updateUI() {
       div.appendChild(dd);
     }
     // show sub‑task progress and list for all tasks
-if (t.subTasks && t.subTasks.length > 0) {
-  const completedCount = t.subTasks.filter(s => s.completed).length;
-  const progress = document.createElement("div");
-  progress.className = "score";
-  progress.textContent = `${completedCount}/${t.subTasks.length} steps done`;
-  div.appendChild(progress);
-
-  // render each sub‑task as a checkbox + label
-  t.subTasks.forEach((sub, subIndex) => {
-    const subRow = document.createElement("div");
-    subRow.style.display = "flex";
-    subRow.style.alignItems = "center";
-    subRow.style.marginLeft = "1rem";
-    const chk = document.createElement("input");
-    chk.type = "checkbox";
-    chk.checked = sub.completed;
-    chk.onchange = () => completeSubTask(i, subIndex);
-    const label = document.createElement("span");
-    label.textContent = sub.name;
-    label.style.marginLeft = "0.25rem";
-    subRow.appendChild(chk);
-    subRow.appendChild(label);
-    div.appendChild(subRow);
-  });
-}
-// add a button to create a new sub‑task for this task
-const addSubBtn = document.createElement("button");
-addSubBtn.textContent = "➕ Step";
-addSubBtn.style.marginTop = "0.25rem";
-addSubBtn.onclick = () => addSubTask(i);
-div.appendChild(addSubBtn);
-
-    taskList.appendChild(div);
-  }
-
-// tasks due today
-const dueTodayList = $("dueTodayList");
-dueTodayList.innerHTML = "";
-const now = new Date();
-// adjust to local timezone so ISO date matches <input type="date">
-now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
-const today = now.toISOString().split("T")[0];
-
-tasks.forEach((task, idx) => {
-  if (task.dueDate === today && !task.completed) {
-    const wrap = document.createElement("div");
-    wrap.textContent = `${task.name} — due today`;
-
-    // show sub‑task progress and list if present
-    if (task.subTasks && task.subTasks.length > 0) {
-      const completedCount = task.subTasks.filter(s => s.completed).length;
+    if (t.subTasks && t.subTasks.length > 0) {
+      const completedCount = t.subTasks.filter(s => s.completed).length;
       const progress = document.createElement("div");
       progress.className = "score";
-      progress.textContent = `${completedCount}/${task.subTasks.length} steps done`;
-      wrap.appendChild(progress);
+      progress.textContent = `${completedCount}/${t.subTasks.length} steps done`;
+      div.appendChild(progress);
 
-      task.subTasks.forEach((sub, subIndex) => {
+      // render each sub‑task as a checkbox + label
+      t.subTasks.forEach((sub, subIndex) => {
         const subRow = document.createElement("div");
         subRow.style.display = "flex";
         subRow.style.alignItems = "center";
@@ -292,57 +337,73 @@ tasks.forEach((task, idx) => {
         const chk = document.createElement("input");
         chk.type = "checkbox";
         chk.checked = sub.completed;
-        chk.onchange = () => completeSubTask(idx, subIndex);
+        chk.onchange = event => completeSubTask(i, subIndex, event.target.checked);
         const label = document.createElement("span");
         label.textContent = sub.name;
         label.style.marginLeft = "0.25rem";
         subRow.appendChild(chk);
         subRow.appendChild(label);
-        wrap.appendChild(subRow);
+        div.appendChild(subRow);
       });
     }
-
-    // add a button to create a new sub‑task for this due task
+    // add a button to create a new sub‑task for this task
     const addSubBtn = document.createElement("button");
-    addSubBtn.textContent = "➕ Step";
+    addSubBtn.textContent = "➕ Add sub-task";
     addSubBtn.style.marginTop = "0.25rem";
-    addSubBtn.onclick = () => addSubTask(idx);
-    wrap.appendChild(addSubBtn);
+    addSubBtn.onclick = () => addSubTask(i);
+    div.appendChild(addSubBtn);
 
-    dueTodayList.appendChild(wrap);
+    taskList.appendChild(div);
   }
-});
 
+  // tasks due today
+  const dueTodayList = $("dueTodayList");
+  dueTodayList.innerHTML = "";
+  const now = new Date();
+  // adjust to local timezone so ISO date matches <input type="date">
+  now.setMinutes(now.getMinutes() - now.getTimezoneOffset());
+  const today = now.toISOString().split("T")[0];
 
+  tasks.forEach((task, idx) => {
+    if (task.dueDate === today && !task.completed) {
+      const wrap = document.createElement("div");
+      wrap.textContent = `${task.name} — due today`;
 
-// show sub-task progress and list
-if (t.subTasks && t.subTasks.length > 0) {
-  const completedCount = t.subTasks.filter(s => s.completed).length;
-  const progress = document.createElement("div");
-  progress.className = "score";
-  progress.textContent = `${completedCount}/${t.subTasks.length} steps done`;
-  div.appendChild(progress);
+      // show sub‑task progress and list if present
+      if (task.subTasks && task.subTasks.length > 0) {
+        const completedCount = task.subTasks.filter(s => s.completed).length;
+        const progress = document.createElement("div");
+        progress.className = "score";
+        progress.textContent = `${completedCount}/${task.subTasks.length} steps done`;
+        wrap.appendChild(progress);
 
-  // render each sub-task as a checkbox + label
-  t.subTasks.forEach((s, subIndex) => {
-    const subRow = document.createElement("div");
-    subRow.style.display = "flex";
-    subRow.style.alignItems = "center";
-    subRow.style.marginLeft = "1rem";
+        task.subTasks.forEach((sub, subIndex) => {
+          const subRow = document.createElement("div");
+          subRow.style.display = "flex";
+          subRow.style.alignItems = "center";
+          subRow.style.marginLeft = "1rem";
+          const chk = document.createElement("input");
+          chk.type = "checkbox";
+          chk.checked = sub.completed;
+          chk.onchange = event => completeSubTask(idx, subIndex, event.target.checked);
+          const label = document.createElement("span");
+          label.textContent = sub.name;
+          label.style.marginLeft = "0.25rem";
+          subRow.appendChild(chk);
+          subRow.appendChild(label);
+          wrap.appendChild(subRow);
+        });
+      }
 
-    const chk = document.createElement("input");
-    chk.type = "checkbox";
-    chk.checked = s.completed;
-    chk.onchange = () => completeSubTask(i, subIndex);
+      // add a button to create a new sub‑task for this due task
+      const addSubBtn = document.createElement("button");
+      addSubBtn.textContent = "➕ Add sub-task";
+      addSubBtn.style.marginTop = "0.25rem";
+      addSubBtn.onclick = () => addSubTask(idx);
+      wrap.appendChild(addSubBtn);
 
-    const label = document.createElement("span");
-    label.textContent = s.name;
-    label.style.marginLeft = "0.25rem";
-
-    subRow.appendChild(chk);
-    subRow.appendChild(label);
-    div.appendChild(subRow);
-  
+      dueTodayList.appendChild(wrap);
+    }
   });
 }
 
@@ -396,13 +457,13 @@ function saveAsTemplate() {
   if (!name) return alert("Task name is required");
   const template = {
     name,
-    importance: +$("importance").value,
-    urgency: +$("urgency").value,
-    novelty: +$("novelty").value,
-    interest: +$("interest").value,
-    externalPressure: +$("externalPressure").value,
-    timeToStart: +$("timeToStart").value,
-    difficulty: +$("difficulty").value
+    importance: getScaleValue("importance"),
+    urgency: getScaleValue("urgency"),
+    novelty: getScaleValue("novelty"),
+    interest: getScaleValue("interest"),
+    externalPressure: getScaleValue("externalPressure", 0),
+    timeToStart: getScaleValue("timeToStart"),
+    difficulty: getScaleValue("difficulty")
   };
   templates.push(template);
   localStorage.setItem("templates", JSON.stringify(templates));
@@ -454,28 +515,46 @@ function renderTemplates() {
   });
 }
 
-window.addEventListener('DOMContentLoaded', init);
-    function addSubTask(taskIndex) {
+window.addEventListener('DOMContentLoaded', () => {
+  ensureScaleControls();
+  init();
+});
+
+function addSubTask(taskIndex) {
   const name = prompt("Sub-task name?");
   if (!name) return;
-  const parent = tasks[taskIndex];
+  const trimmed = name.trim();
+  if (!trimmed) return;
 
-  // create a sub-task; use parent’s priority as a starting point
+  const parent = tasks[taskIndex];
+  if (!parent) return;
+
+  if (!Array.isArray(parent.subTasks)) {
+    parent.subTasks = [];
+  }
+
+  const basePriority = computePriority({ ...parent, subTasks: [] });
   const subTask = {
     id: Date.now().toString(),
-    name,
+    name: trimmed,
     completed: false,
-    priority: parent.priority
+    priority: basePriority
   };
 
   parent.subTasks.push(subTask);
+  parent.priority = computePriority(parent);
   persist();
   updateUI();
 }
 
-function completeSubTask(taskIndex, subIndex) {
+function completeSubTask(taskIndex, subIndex, isCompleted) {
   const parent = tasks[taskIndex];
-  parent.subTasks[subIndex].completed = true;
+  if (!parent || !Array.isArray(parent.subTasks)) return;
+  const subTask = parent.subTasks[subIndex];
+  if (!subTask) return;
+
+  subTask.completed = Boolean(isCompleted);
+  parent.priority = computePriority(parent);
   persist();
   updateUI();
 }
