--- a/index.html
+++ b/index.html
@@ -1,31 +1,7 @@
- (cd "$(git rev-parse --show-toplevel)" && git apply --3way <<'EOF' 
-diff --git a/index.html b/index.html
-index 8a142b18939a1444784d2fc1cf95a31032d444e5..50f616d51f453ebd3111a881de83504d8e2111c9 100644
---- a/index.html
-+++ b/index.html
-@@ -17,186 +17,279 @@
-     h1, h2, h3 { color: #fff; }
-     .hidden { display: none; }
-     label { display: block; margin-top: 0.5rem; }
-     input[type="text"], select {
-       background: #222; color: #eee; border: 1px solid #555;
-       padding: 0.5rem; width: 100%;
-     }
-     button {
-       background: #333; color: #fff; border: none; padding: 0.6rem 1rem;
-       margin: 0.5rem 0.25rem; cursor: pointer; border-radius: 4px;
-     }
-     button:disabled { opacity: 0.4; cursor: not-allowed; }
-     .peek { background: #222; margin-top: 1rem; padding: 1rem; border-radius: 6px; max-width: 600px; }
-     .peek summary { cursor: pointer; }
-     .task { margin: 0.25rem 0; }
-     .score { font-size: 0.8rem; color: #ccc; }
-     .focus { font-size: 1.5rem; margin: 1rem 0; }
-     [aria-live] { outline: none; }
-   </style>
+ </style>
  </head>
  <body>
-   <h1>🎯 Task Focus</h1>
+   <h1>🎯 Tasker 5000</h1>
  
    <section id="capture">
      <label>Task Name <input id="name" type="text" /></label>
